// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset renders a custom descriptor paragraph 1`] = `
<fieldset class="ncf__fieldset">
  <p class="ncf__fieldset-descriptor">
    Descriptor text
  </p>
  <div class="ncf__fields">
    <div id="fields_test">
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders a custom descriptor paragraph 2`] = `
<fieldset class="ncf__fieldset">
  <p class="ncf__fieldset-descriptor">
    Descriptor text
  </p>
  <div class="ncf__fields">
    <div id="fields_test">
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders a custom header in specific heading level tags 1`] = `
<fieldset class="ncf__fieldset">
  <h2 class="ncf__header">
    <div>
      Header text
    </div>
  </h2>
  <div class="ncf__fields">
    <div id="fields_test">
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders a custom header in specific heading level tags 2`] = `
<fieldset class="ncf__fieldset">
  <h2 class="ncf__header">
    <div>
      Header text
    </div>
  </h2>
  <div class="ncf__fields">
    <div id="fields_test">
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders a custom legend 1`] = `
<fieldset class="ncf__fieldset">
  <legend class="ncf__legend">
    Customise your experience
  </legend>
  <div class="ncf__fields">
    <div id="fields_test">
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders a custom legend 2`] = `
<fieldset class="ncf__fieldset">
  <legend class="ncf__legend">
    Customise your experience
  </legend>
  <div class="ncf__fields">
    <div id="fields_test">
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders a custom legend which is visually hidden 1`] = `
<fieldset class="ncf__fieldset">
  <legend class="ncf__legend o-normalise-visually-hidden">
    Customise your experience
  </legend>
  <div class="ncf__fields">
    <div id="fields_test">
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders a custom legend which is visually hidden 2`] = `
<fieldset class="ncf__fieldset">
  <legend class="ncf__legend o-normalise-visually-hidden">
    Customise your experience
  </legend>
  <div class="ncf__fields">
    <div id="fields_test">
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders a fieldset element with a custom name value 1`] = `
<fieldset name="customise-experience"
          class="ncf__fieldset"
>
  <div class="ncf__fields">
    <div id="fields_test">
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders a fieldset element with a custom name value 2`] = `
<fieldset name="customise-experience"
          class="ncf__fieldset"
>
  <div class="ncf__fields">
    <div id="fields_test">
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders a fieldset element with default props 1`] = `
<fieldset class="ncf__fieldset">
  <div class="ncf__fields">
    <div id="fields_test">
    </div>
  </div>
</fieldset>
`;

exports[`Fieldset renders a fieldset element with default props 2`] = `
<fieldset class="ncf__fieldset">
  <div class="ncf__fields">
    <div id="fields_test">
    </div>
  </div>
</fieldset>
`;
